[gd_scene load_steps=12 format=3 uid="uid://bsp7yqd6147ib"]

[ext_resource type="PackedScene" uid="uid://bs6nh8tic4s4u" path="res://tile_map.tscn" id="1_luhkk"]
[ext_resource type="PackedScene" uid="uid://daywsgla5ottt" path="res://player.tscn" id="2_gn3vk"]
[ext_resource type="PackedScene" uid="uid://bo10mg1e51e2i" path="res://player_camera.tscn" id="2_pf8xn"]
[ext_resource type="Texture2D" uid="uid://bocgjhmsb71s1" path="res://assets/ui/ui-background.png" id="17_brl62"]
[ext_resource type="Script" path="res://ui.gd" id="17_th4ya"]
[ext_resource type="Texture2D" uid="uid://32vk23llohr3" path="res://assets/ui/progress-bar-under.png" id="18_7msl1"]
[ext_resource type="Texture2D" uid="uid://icdega1kv3t" path="res://assets/ui/progress-bar-fill.png" id="19_63yn0"]
[ext_resource type="Texture2D" uid="uid://eshucdjkhfhx" path="res://assets/ui/ui-key.png" id="22_fw44p"]
[ext_resource type="AudioStream" uid="uid://c2hdrjmx0j47g" path="res://assets/audio/Retro Ambience 02.wav" id="22_pe6hr"]
[ext_resource type="AudioStream" uid="uid://ufxai3s82iau" path="res://assets/audio/1. Into The Spaceship.wav" id="26_r6ucp"]

[sub_resource type="Environment" id="Environment_05hah"]
background_mode = 3
background_canvas_max_layer = -1

[node name="TheWorld" type="Node2D"]

[node name="PlayerCamera" parent="." instance=ExtResource("2_pf8xn")]

[node name="Player" parent="." instance=ExtResource("2_gn3vk")]
position = Vector2(16, 48)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_05hah")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2
follow_viewport_enabled = true

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("17_th4ya")

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 64.0
offset_bottom = 64.0

[node name="TextureRect" type="TextureRect" parent="UI/Control"]
modulate = Color(1, 1, 1, 0.784314)
texture_filter = 1
layout_mode = 0
offset_right = 24.0
offset_bottom = 9.0
texture = ExtResource("17_brl62")

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/Control"]
modulate = Color(1, 1, 1, 0.686275)
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 21.0
offset_bottom = 3.0
max_value = 18.0
texture_under = ExtResource("18_7msl1")
texture_progress = ExtResource("19_63yn0")

[node name="KeyContainer" type="HBoxContainer" parent="UI/Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -31.0
offset_right = 25.0
offset_bottom = -23.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Key1" type="TextureRect" parent="UI/Control/KeyContainer"]
visible = false
layout_mode = 2
texture = ExtResource("22_fw44p")

[node name="Key2" type="TextureRect" parent="UI/Control/KeyContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 2
texture = ExtResource("22_fw44p")

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("26_r6ucp")
volume_db = -15.0
autoplay = true

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("22_pe6hr")
volume_db = -20.0
autoplay = true

[node name="TileMap" parent="." instance=ExtResource("1_luhkk")]
layer_0/tile_data = PackedInt32Array(65551, 458752, 2, 15, 720896, 0, 65550, 589824, 3, 14, 655360, 0, 65549, 589824, 3, 13, 655360, 0, 65548, 589824, 3, 12, 655360, 0, 65547, 589824, 3, 11, 655360, 0, 65546, 589824, 3, 10, 655360, 0, 65545, 589824, 3, 9, 655360, 0, 65544, 589824, 3, 8, 655360, 0, 65543, 589824, 3, 7, 655360, 0, 65542, 589824, 3, 6, 655360, 0, 65541, 589824, 3, 5, 655360, 0, 65540, 589824, 3, 4, 655360, 0, 65539, 589824, 3, 3, 655360, 0, 65538, 589824, 3, 2, 655360, 0, 65537, 589824, 3, 1, 655360, 0, 65536, 262144, 2, 0, 524288, 0, 917504, 0, 1, 851968, 0, 1, 786432, 262144, 2, 720896, 262144, 1, 655360, 0, 1, 589824, 0, 1, 524288, 0, 1, 458752, 65536, 1, 393216, 0, 1, 327680, 0, 1, 262144, 0, 1, 196608, 0, 1, 131072, 0, 1, 983055, 196608, 2, 917519, 0, 1, 851983, 0, 1, 983054, 131072, 3, 983053, 131072, 3, 983052, 131072, 3, 983051, 131072, 3, 983050, 393216, 3, 983049, 327680, 3, 983048, 131072, 3, 983047, 131072, 3, 983046, 131072, 3, 983045, 131072, 3, 983044, 131072, 3, 983043, 131072, 3, 983042, 131072, 3, 983041, 131072, 3, 983040, 65536, 2, 786447, 0, 1, 720911, 196608, 1, 655375, 0, 1, 589839, 0, 1, 524303, 0, 1, 458767, 0, 1, 393231, 0, 1, 327695, 0, 1, 262159, 0, 1, 196623, 0, 1, 131087, 0, 1, 458753, 131072, 3, 458754, 131072, 3, 458755, 196608, 3, 524293, 65536, 3, 524294, 196608, 3, 589832, 65536, 3, 589833, 196608, 3, 655371, 65536, 3, 655372, 196608, 3, 720910, 65536, 3, 786445, 0, 3, 851980, 0, 3, 917514, 720896, 0, 917513, 524288, 0, 851975, 196608, 3, 851974, 65536, 3, 786436, 196608, 3, 786435, 131072, 3, 786434, 393216, 3, 720898, 720896, 0, 720897, 655360, 0, 786433, 589824, 3, 458760, 0, 3, 393226, 0, 3, 327692, 0, 3, 262153, 0, 3, 196613, 196608, 3, 196612, 65536, 3)
